--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "history": "^5.0.0",
+    "history": "4.9.0",
     "html-react-parser": "^0.13.0",
     "immer": "^7.0.5",
     "prop-types": "^15.7.2",
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.8",
     "reactotron-react-js": "^3.3.7",
     "reactotron-redux": "^3.1.3",
     "reactotron-redux-saga": "^4.2.3",
