--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.1",
+    "sweetalert2": "^9.17.0",
+    "sweetalert2-react-content": "^3.0.3",
     "yup": "^0.29.1"
   },
   "scripts": {
